color contrast issue

--- a/week03/styles/design.css
+++ b/week03/styles/design.css
@@ -1,45 +1,45 @@
 body {
-	font-family: Roboto, helvetica, sans-serif;
+    font-family: Roboto, helvetica, sans-serif;
 }
 
 header,
 main,
 footer {
-	max-width: 760px;
-	margin: 0 auto;
+    max-width: 760px;
+    margin: 0 auto;
 }
 
 marquee {
-	padding: 1rem;
-	background-color: #eee;
+    padding: 1rem;
+    background-color: #eee;
 }
 
 h1 {
-	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 main {
-	display: grid;
+    display: grid;
 }
 
 h2 {
-	color: navy;
-	text-align: left;
+    color: navy;
+    text-align: left;
 }
 
 article p {
-	text-align: justify;
+    text-align: justify;
 }
 
 .callout {
-	color: #777;
-	background-color: #702963;
+    color: black;
+    background-color: gray;
     padding: 1rem;
 }
 
 footer {
-	margin-top: 1rem;
-	border-top: 1px solid rgba(0, 0, 0, 0.1);
-	font-size: smaller;
-	text-align: right;
+    margin-top: 1rem;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    font-size: smaller;
+    text-align: right;
 }
